--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "template": "https://github.com/strapi/strapi-template-blog"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
+    "node": "16.18.1",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
