--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "strapi-plugin-upload": "3.5.0 ",
     "strapi-plugin-users-permissions": "3.5.0 ",
     "strapi-provider-email-smtp": "^1.0.1",
-    "strapi-utils": "3.5.0 "
+    "strapi-utils": "3.5.0 ",
+    "@strapi/strapi": "4.4.1",
+    "@strapi/plugin-users-permissions": "4.4.1",
+    "@strapi/plugin-i18n": "4.4.1",
+    "better-sqlite3": "7.4.6"
   },
   "author": {
     "name": "A Strapi developer"
